oci_cluster/grafana/grafana-service.yaml
---
apiVersion: v1 
kind: Service
metadata: 
  name: grafana
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
  - name: default
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana-app
